fix: ourProject__right visibility on mobile

--- a/src/global/components/pageBlocks/ourProject/index.scss
+++ b/src/global/components/pageBlocks/ourProject/index.scss
@@ -109,6 +109,7 @@
       width: 50%;
     }
     &__right {
+      display: none;
       height: 180px;
       width: 160px;
       right: -10px;
